syntax = "proto3";
option go_package = "github.com/SpeedReach/monify";

import "google/api/annotations.proto";

message GroupGroupBillEmpty{}

service GroupsBillService{
    rpc CreateGroupBill(CreateGroupBillRequest) returns (CreateGroupBillResponse){
        option (google.api.http) = {
            post: "/v1/groups_bill"
            body: "*"
        };
    }

    rpc DeleteGroupBill(DeleteGroupBillRequest) returns (GroupGroupBillEmpty){
        option (google.api.http) = {
            delete: "/v1/groups_bill/{bill_id}"
        };
    }

    rpc ModifyGroupBill(ModifyGroupBillRequest) returns (GroupGroupBillEmpty){
        option (google.api.http) = {
            put: "/v1/groups_bill/{bill_id}"
            body: "*"
        };
    }

    rpc GetSelfTotalSpend(GetSelfTotalSpendRequest) returns (GetSelfTotalSpendResponse){
        option (google.api.http) = {
            get: "/v1/groups_bill/self_total_spend"
        };
    }

    rpc GetGroupTotalSpend(GetGroupTotalSpendRequest) returns (GetGroupTotalSpendResponse){
        option (google.api.http) = {
            get: "/v1/groups_bill/group_bill"
        };
    }

}

message CreateGroupBillRequest{
    string group_id = 1;
    double total_money = 2;
    string title = 3;
    string description = 4;
    repeated PrepaidPerson prepaid_people = 5;
    repeated SplitPerson split_people = 6;
}

message PrepaidPerson{
    string member_id = 1;
    double amount = 2;
}

message SplitPerson{
    string member_id = 1;
    double amount = 2;
}

message CreateGroupBillResponse{
    string bill_id = 1;
}

message DeleteGroupBillRequest{
    string bill_id = 1;
}

message ModifyGroupBillRequest{
    string group_id = 1;
    string bill_id = 7;
    double total_money = 2;
    string title = 3;
    string description = 4;
    repeated PrepaidPerson prepaid_people = 5;
    repeated SplitPerson split_people = 6;
}

message GetSelfTotalSpendRequest{
    string group_id = 1;
}

message GetSelfTotalSpendResponse{
    double amount = 1;
}

message GetGroupTotalSpendRequest{
    string group_id = 1;
}

message GetGroupTotalSpendResponse{
    double amount = 1;
}